# brains

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  default_fsds_settings.json  env.yml  nodes.md
.github/workflows/: add_tag.yml  black.yml  check_dependencies.yml  check_versioning.yml
scripts/: build.sh  clean.sh  create_cpp_pkg.sh  create_python_pkg.sh  initial_setup.sh  launch.sh  purge.sh  update_deps_conda.sh
src/: .gitignore
src/brains_cpp/: CMakeLists.txt  package.xml
src/brains_cpp/include/brains_cpp/: common.hpp
src/brains_cpp/src/fsds/: fsds_camera_node.cpp  fsds_lidar_node.cpp  fsds_main_node.cpp
src/brains_custom_interfaces/: CMakeLists.txt  package.xml
src/brains_custom_interfaces/msg/: BoundingBoxes.msg  CarControls.msg  CarControlsPrediction.msg  CarState.msg  CenterLineWidths.msg  ConesObservations.msg  ControlPhase.msg  ControlPrediction.msg  GSSData.msg  IMUData.msg  Pose2D.msg  RelConesPositions.msg  VelocityEstimation.msg  WSSData.msg  WssData.msg
src/brains_custom_interfaces/srv/: MapNameFSDS.srv
src/brains_fsds_bridge/: CMakeLists.txt  package.xml
src/brains_fsds_bridge/include/brains_fsds_bridge/: common.hpp
src/brains_fsds_bridge/launch/: default.launch.py
src/brains_fsds_bridge/src/: camera_node.cpp  lidar_node.cpp  main_node.cpp
src/brains_launch/: package.xml  setup.cfg  setup.py
src/brains_launch/launch_files/: control_only.launch.py  default_launch.py  fsds_bridge.launch.py  sysid_dataset.launch.py
src/brains_python/: package.xml  requirements.txt  setup.cfg  setup.py
src/brains_python/brains_python/: __init__.py
src/brains_python/brains_python/common/: __init__.py  cones_colors.py  math.py  mission.py  params.py  ros_multiarray.py  sleep.py
src/brains_python/brains_python/control/: README.md  __init__.py  constants.py  controller.py  motion_planner.py  motion_planner_controller.py
src/brains_python/brains_python/control/ihm_acados/: __init__.py  calibration.py  constants.py  ihm_acados.py
src/brains_python/brains_python/control/ihm_forces/: __init__.py  constants.py  ihm_interface.py  ihm_model.py
src/brains_python/brains_python/control/lqr/: __init__.py  calibration.py  constants.py  lqr.py
src/brains_python/brains_python/control/stanley/: __init__.py  calibration.py  constants.py  stanley.py
src/brains_python/brains_python/control/utils/: __init__.py  calibration.py  closed_loop_run.py
src/brains_python/brains_python/localization_mapping/: ekf_localization.py  ekf_slam.py  ekfslam.py  localizer.py  original_ekf_slam.py
src/brains_python/brains_python/nodes/: camera_only.py  control_known_track.py  control_only.py  csv_logger.py  ekf_slam.py  fsds_car_controller.py  fsds_car_sensors.py  fsds_cones_observations_ground_truth.py  fsds_cones_obsversation_ground_truth.py  fsds_velocity_estimation.py  multi_subscription_node.py  numpy_logger.py  point_cloud_file.py  velocity_estimation.py  video_file_and_yolo.py  vision_fusion.py
src/brains_python/brains_python/vision/: camera_only.py  fusion.py  lidar_only.py  pnp.py
src/brains_python/brains_python/vision/ransac/: ransac.py
src/brains_python/brains_python/vision/yolo/: yolo_pose.py
src/brains_python/brains_python/vision/yolo/cfg/: yolov7-tiny-cone.yaml  yolov7-w6-cone.yaml
src/brains_python/brains_python/vision/yolo/data/: cones_kpts.yaml
src/brains_python/brains_python/vision/yolo/models/: yolo.py
src/brains_python/brains_python/vision/yolo/utils/: activations.py  autoanchor.py  datasets.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
src/brains_python/test/common/: test_ros_multiarray.py
src/brains_python/test/control/: .gitignore  create_test_config.py  test_car_params.py  test_controller.py  test_ihm_acados.py  test_ihm_acados_params.py  test_lqr.py  test_lqr_params.py  test_stanley.py  test_stanley_params.py
src/brains_python/work/control/: .gitignore  ihm_example.py  lqr_skidpad.csv  stanley_skidpad.csv
src/brains_python/work/control/ihm_forces/: ihm_generate.py  ihm_interface_test.py  ihm_pow.py
src/brains_python/work/control/model_estimation/: control_derivatives.csv  controls.csv  model_estimation.py  model_estimation_2.py  model_estimation_3.py  states.csv
src/brains_python/work/control/sysid/: neural.ipynb  neural.py  rk4_1.ckpt
src/brains_python/work/control/sysid/data/: acceleration_15.csv  fsds_competition_2_10.csv  fsds_competition_2_10b.csv  fsds_competition_2_15.csv  fsds_competition_2_5.csv  fsds_competition_2_5b.csv  short_skidpad_10.csv  short_skidpad_15.csv  short_skidpad_5.csv
src/brains_python/work/datasets/: .gitignore  common.py  control_dataset.py  localization_dataset.py  sysid_dataset.py  ve_dataset.py  vedataset2.py  vision_dataset.py
src/brains_python/work/localization_mapping/: ekf.py  ekfslam.py
src/brains_python/work/ve/: common.py  data_analysis.py  neuro.py  ve.py
src/brains_python/work/vision/yolo/: export.py  onnx_.py
