<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brains_launch</name>
  <version>0.0.0</version>

  <description>launch configurations of the BRAINS project</description>
  <maintainer email="oancea.tudor@icloud.com">Tudor Oancea</maintainer>
  <license>MIT</license>

  <depend>brains_custom_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
